# Clark

./: .eslintrc.json  docker-compose.dev.yml  docker-compose.yml  nginx.conf  nginx.dev.conf  package-lock.json  package.json
api/: devServer.js  package-lock.json  package.json
api/Dessert_api/: server.js
api/Dessert_api/models/: Dessert.js
api/Dessert_api/routes/: Dessert.js
api/animal_api/: server.js
api/animal_api/models/: Animal.js
api/animal_api/routes/: Animal.js
api/main_endpoints/: server.js
api/main_endpoints/routes/: User.js
api/peripheral_api/routes/: Printer.js
keep_ssh_tunnel_open/: Cargo.toml  Dockerfile
keep_ssh_tunnel_open/src/: main.rs
src/: Routing.js  index.js
src/APIFunctions/: Animals.js  User.js
src/Components/Navbar/: AdminNavbar.js  UserNavbar.js  navbar.css
src/Pages/Animals/: AnimalAdmin.js  AnimalCard.js  Animals.js  EditAnimalCard.js
src/Pages/Overview/: Overview.css  Overview.js  OverviewProfile.js  SVG.js
src/Pages/Profile/admin/: AdminDashboard.css  AdminDashboard.js
src/Pages/UserManager/: UserInfo.js
test/api/: User.js
