[package]
name = "keep_ssh_tunnel_open"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.17", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
log = "0.4"
env_logger = "0.9.0"

